<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:name="com.example.baked.RecipeListFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        style="@style/IngredientsHeadingText"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/master_list_ingredients_recyclerview"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="@dimen/app_margin"
        android:background="@drawable/rectangle_rounded_bottom_corners_selected"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/master_list_steps_recyclerview"/>
</LinearLayout>





