<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cupcake_background"
        android:contentDescription="@string/app_background" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/FrameLayoutMargin">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_activity_recyclerview"
            android:clipToPadding="false"
            android:paddingBottom="8dp"/>
    </FrameLayout>
    <ProgressBar
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:id="@+id/main_loading_bar"/>
    <TextView
        android:id="@+id/error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_loading_bar"
        android:text="@string/no_network_connection"/>
</RelativeLayout>