...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous_step"
            style="@style/NavButton"
            android:visibility="gone"
            android:id="@+id/previous_step_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_step"
            style="@style/NavButton"
            android:visibility="gone"
            android:id="@+id/next_step_button"/>
    </LinearLayout>
</RelativeLayout>
